crates/fluvio-connector-derive/tests/ui/invalid_config_type.rs
use fluvio_connector_derive::connector;

#[connector(source)]
async fn start_fn(config: &[i32], producer: ()) {}
